Day22 part2 updated