@@ -2,9 +2,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 
 public class Service {
     List<Long> secretNumbers = new ArrayList<>();
@@ -21,7 +19,6 @@ public class Service {
     public long partOne() {
         Long result = 0L;
         for (Long secretNumber: secretNumbers) {
-            Long number = 2024L;
             for (int i = 0; i < 2000; i++) {
                 secretNumber = calculateSecretNumber(secretNumber);
             }
@@ -50,11 +47,52 @@ public class Service {
 
     public int partTwo() {
         List<List<Integer>> prices = getPrices();
+        Map<List<Integer>, Integer> bananas = new HashMap<>();
+
+        for (Long secretNumber: secretNumbers) {
+            Set<List<Integer>> seen = new HashSet<>();
+            List<Integer> price = new ArrayList<>();
+            price.add((int) (secretNumber % 10));
+            for (int i = 0; i < 2000; i++) {
+                secretNumber = calculateSecretNumber(secretNumber);
+                price.add((int) (secretNumber % 10));
+                if (price.size() > 6) {
+                    List<Integer> pattern = new ArrayList<>();
+                    int a = price.get(i-5);
+                    int b = price.get(i-4);
+                    int c = price.get(i-3);
+                    int d = price.get(i-2);
+                    int e = price.get(i-1);
+                    int f = price.get(i);
+
+                    pattern.add(a-b);
+                    pattern.add(b-c);
+                    pattern.add(c-d);
+                    pattern.add(d-e);
+
+                    if (!seen.contains(pattern)){
+                        seen.add(pattern);
+                        if (bananas.containsKey(pattern)) {
+                            bananas.put(pattern, bananas.get(pattern) + f);
+                        } else {
+                            bananas.put(pattern, f);
+                        }
+                    }
+                }
+            }
+        }
+
+        return bananas.values().stream().mapToInt(value -> value).max().getAsInt();
+    }
+
+    public int partTwo1() {
+        List<List<Integer>> prices = getPrices();
         List<List<Integer>> differences = getDifferences(prices);
         List<Integer> patterns = differences.getFirst();
+        Set<String> seen = new HashSet<>();
 
         int maxBananas = -1;
-        for(int i = 0; i < patterns.size()-4; i+=4){
+        for(int i = 0; i < patterns.size()-3; i+=4){
             List<Integer> pattern = new ArrayList<>();
             Integer bananas = 0;
             pattern.add(patterns.get(i));
@@ -62,15 +100,19 @@ public class Service {
             pattern.add(patterns.get(i+2));
             pattern.add(patterns.get(i+3));
 
-            bananas += prices.getFirst().get(i + 4);
-            for (int j = 1; j < differences.size(); j++) {
-                for (int k = 0; k < differences.get(j).size() - 5; k++) {
-                    if ((differences.get(j).get(k) == pattern.get(0)) &&
-                            (differences.get(j).get(k + 1) == pattern.get(1)) &&
-                            (differences.get(j).get(k + 2) == pattern.get(2)) &&
-                            (differences.get(j).get(k + 3) == pattern.get(3))) {
-                        bananas += prices.get(j).get(k + 4);
-                        break;
+            if (!seen.contains(pattern.toString().replace("[","").replace("]","").replace(" ",""))) {
+                seen.add(pattern.toString().replace("[","").replace("]","").replace(" ",""));
+
+                bananas += prices.getFirst().get(i + 4);
+                for (int j = 1; j < differences.size(); j++) {
+                    for (int k = 0; k < differences.get(j).size() - 4; k++) {
+                        if ((differences.get(j).get(k) == pattern.get(0)) &&
+                                (differences.get(j).get(k + 1) == pattern.get(1)) &&
+                                (differences.get(j).get(k + 2) == pattern.get(2)) &&
+                                (differences.get(j).get(k + 3) == pattern.get(3))) {
+                            bananas += prices.get(j).get(k + 4);
+                            break;
+                        }
                     }
                 }
             }
@@ -91,7 +133,7 @@ public class Service {
             differences.add(dif);
         }
         return differences;
-        //1793 low
+        //1800 low
     }
 
 
